--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "history": "^4.9.0",
     "jest": "^24.9.0",
     "lodash": "^4.17.11",
+    "mapbox-gl": "^1.3.1",
+    "react-mapbox-gl": "^4.6.0",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "query-string": "^6.9.0",
