--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "jest": "^24.9.0",
     "lodash": "^4.17.11",
     "mapbox-gl": "^1.6.1",
+    "mapbox-gl-js-mock": "^1.0.2",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
-    "query-string": "^6.9.0",
+    "query-string": "^6.10.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-mapbox-gl": "^4.8.2",
