--- a/package.json
+++ b/package.json
@@ -51,6 +51,13 @@
   },
   "devDependencies": {
     "node-sass": "^4.13.0",
-    "sass-loader": "^8.0.0"
+    "sass-loader": "^8.0.0",
+    "jest-dom": "3.1.3",
+    "react-testing-library": "6.1.2"
+  },
+  "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
   }
 }
