--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "classnames": "^2.2.6",
@@ -50,10 +49,11 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^4.13.0",
-    "sass-loader": "^8.0.0",
+    "@testing-library/jest-dom": "^4.2.4",
     "jest-dom": "3.1.3",
-    "react-testing-library": "6.1.2"
+    "node-sass": "^4.13.0",
+    "react-testing-library": "6.1.2",
+    "sass-loader": "^8.0.0"
   },
   "jest": {
     "snapshotSerializers": [
